remove users post method, update swagger
